<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_header">

    <!-- Cabecera Azul -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guarda_de_seguridad"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtBienvenida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/bienvenido_"
                android:textColor="#CCFFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgPerfilUsuario"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/baseline_shield_24"
            app:civ_border_width="1.5dp"
            app:civ_border_color="@color/zxing_transparent"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <!-- Cuerpo Blanco Redondeado -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/contenidoNormal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_scanner_body"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Área de QR con esquinas responsiva -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerScanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:padding="15dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.75">

                    <!-- Esquinas del Escáner -->
                    <View
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="top|start"
                        android:background="@drawable/ic_qr_corner_blue" />

                    <View
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="top|end"
                        android:background="@drawable/ic_qr_corner_blue"
                        android:rotation="90" />

                    <View
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom|start"
                        android:background="@drawable/ic_qr_corner_blue"
                        android:rotation="-90" />

                    <View
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom|end"
                        android:background="@drawable/ic_qr_corner_blue"
                        android:rotation="180" />

                    <ImageView
                        android:id="@+id/imgQrPlaceholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:src="@drawable/qr"
                        tools:ignore="ContentDescription" />

                    <View
                        android:id="@+id/scanner_line"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/blue_modern"
                        android:visibility="invisible" />
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:shimmer_auto_start="true"
                app:shimmer_base_alpha="1.0"
                app:shimmer_highlight_alpha="0.5"
                app:shimmer_duration="1500">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnScan"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/btn_capsule"
                    android:text="@string/btn_scaner_ahora"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    app:elevation="15dp"
                    app:icon="@drawable/outline_document_scanner_24"
                    app:iconGravity="textStart"
                    app:iconPadding="12dp"
                    app:iconSize="24dp"
                    app:iconTint="@color/white" />
            </com.facebook.shimmer.ShimmerFrameLayout>

            <!-- Info Box -->
            <LinearLayout
                android:id="@+id/infoBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_info_box"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_info_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/instruccion_escaneo"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="Información del estudiante"
                android:textSize="16sp"
                android:visibility="gone" />

            <include
                android:id="@+id/llamar_ResultadoXML"
                layout="@layout/resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- PANTALLA SOLO PARA ESCANEAR -->
    <FrameLayout
        android:id="@+id/pantallaScanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/scanBox"
            android:layout_width="330dp"
            android:layout_height="420dp"
            android:layout_gravity="center">

            <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
                android:layout_width="290dp"
                android:layout_height="380dp"
                android:layout_gravity="center"
                app:scaleType="fillCenter" />

            <ImageView
                android:id="@+id/imgMarcoScanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/linea_borde_scanner"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCerrarScanner"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="45dp"
            android:backgroundTint="@color/blue_modern"
            android:text="Cancelar escaneo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="30dp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>